unpackaged/main/default/objects/Pricing_Rate__c/Pricing_Rate__c.object-meta.xml
<CustomObject>
    <label>Pricing Rate</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Price Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>