unpackaged/main/default/objects/Pricing_Rate__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <label>Daily Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>