unpackaged/main/default/objects/Pricing_Rate__c/fields/Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate__c</fullName>
    <inlineHelpText>The flat rate of this product if applicable.</inlineHelpText>
    <label>Flat Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>