unpackaged/main/default/objects/Pricing_Rate__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <inlineHelpText>The hourly rate of this product if applicable.</inlineHelpText>
    <label>Hourly Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>