unpackaged/main/default/objects/Pricing_Rate__c/fields/Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate__c</fullName>
    <inlineHelpText>Monthly rate of related product if applicable.</inlineHelpText>
    <label>Monthly Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>