unpackaged/main/default/objects/Pricing_Rate__c/fields/Overtime_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Rate__c</fullName>
    <inlineHelpText>The overtime rate of this product if applicable.</inlineHelpText>
    <label>Overtime Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>