unpackaged/main/default/objects/Pricing_Rate__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <inlineHelpText>Related price book to record entry and product within salesforce price book.</inlineHelpText>
    <label>Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>