unpackaged/main/default/objects/Pricing_Rate__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Related product for this record</inlineHelpText>
    <label>Product</label>
    <type>TextArea</type>
</CustomField>