unpackaged/main/default/objects/Pricing_Rate__c/fields/Weekly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Rate__c</fullName>
    <inlineHelpText>Weekly rate of related product if applicable.</inlineHelpText>
    <label>Weekly Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>