unpackaged/main/default/objects/Pricing_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Price_Book__c</columns>
    <columns>Product__c</columns>
    <columns>Hourly_Rate__c</columns>
    <columns>Overtime_Rate__c</columns>
    <columns>Flat_Rate__c</columns>
    <columns>Daily_Rate__c</columns>
    <columns>Weekly_Rate__c</columns>
    <columns>Monthly_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>